--- a/README.org
+++ b/README.org
@@ -8,7 +8,16 @@ A simple cross-platform slider bar.
 - make the shell a user choice or choose proper fallbacks for cross-platform use.
 * TODO Installation
 ** Gentoo
+When dbar matures I'll add it to the GURU repository. For now, enable my [[https://github.com/mjkalyan/james-overlay][personal overlay]], synchronize it, then emerge!
+#+begin_src sh
+eselect repository add james-overlay git https://github.com/mjkalyan/james-overlay.git
+emaint sync -r james-overlay
+emerge app-misc/dbar
+#+end_src
 ** Cargo
+Not yet uploaded to crates.io.
+
+Instead you can [[https://github.com/mjkalyan/dbar/releases][download the source]] or clone the project and run =cargo install=.
 * About
 Simple utilities which are easily integrated into scripts or chained together with other utilities are a joy to use. Text-based shell utilities often work like this but, sadly, not many graphical programs share the same philosophy.
 
